@@ -60,7 +60,10 @@ tasks {
 
 gluonfx {
     target = "host"
-    compilerArgs = listOf("--enable-url-protocols=https", "-H:+ReportExceptionStackTraces")
+    compilerArgs = listOf(
+        "--enable-url-protocols=https",
+        "--add-modules=jdk.jrtfs,jdk.zipfs",
+        "-H:+ReportExceptionStackTraces")
 }
 
 allprojects {
